Fixed submit button being off screen and moved instructions button below header on phones

--- a/public/style.css
+++ b/public/style.css
@@ -236,7 +236,7 @@ input {
 }
 .introBtn {
   margin: 0 auto;
-  margin-top: 35px;
+  margin-top: 40px;
   text-align: center;
   margin-bottom: 20px;
 
@@ -441,6 +441,17 @@ input {
 }
 
 @media (max-width: 430px) {
+  .submitAnsForm {
+    height: 55px;
+  }
+  .submitBtn {
+    margin: 0 auto;
+    margin-top: 7px;
+    display: block;
+  }
+  .closeBtn {
+    margin-top: 5px;
+  }
   .ansBox {
     text-align: center;
     display: block;
